--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
