--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
