--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,18 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
+    "firebase": "^11.1.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
+    "react-share": "^5.1.2",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
