--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "firebase": "^11.1.0",
